config-root/namespaces/jx-staging/nodey492/deployment.yaml
# Source: nodey492/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey492-nodey492
  labels:
    draft: draft-app
    chart: "nodey492-1.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodey492-nodey492
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey492-nodey492
    spec:
      containers:
        - name: nodey492
          image: "ghcr.io/jstrachan/nodey492:1.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
