config-root/namespaces/jx-staging/nodey492/ingress.yaml
# Source: nodey492/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nodey492
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nodey492
              servicePort: 80
      host: nodey492-jx.34.78.85.241.nip.io
